added empty panel stack

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	<title>Recovery</title>
 
 	<link rel="stylesheet" href="index.sass">
+	<link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+	<link rel="stylesheet" href="node_modules/@blueprintjs/core/lib/css/blueprint.css">
 	<script src="index.tsx"></script>
 </head>
 <body>
